// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outlineWidth renders 0 1`] = `
Array [
  .c0 {
  outline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders function 1`] = `
Array [
  .c0 {
  outline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  outline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders negative number 1`] = `
Array [
  .c0 {
  outline-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  outline-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  outline-width: July;
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  outline-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-width: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    outline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    outline-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  outline-width: July;
}

@media May {
  .c0 {
    outline-width: August;
  }
}

@media April {
  .c0 {
    outline-width: September;
  }
}

@media January {
  .c0 {
    outline-width: November;
  }
}

@media April {
  .c0 {
    outline-width: August;
  }
}

@media June {
  .c0 {
    outline-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  outline-width: July;
}

@media May {
  .c0 {
    outline-width: August;
  }
}

@media April {
  .c0 {
    outline-width: September;
  }
}

@media January {
  .c0 {
    outline-width: November;
  }
}

@media April {
  .c0 {
    outline-width: August;
  }
}

@media June {
  .c0 {
    outline-width: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  outline-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-width: November;
  }
}

@media April {
  .c0 {
    outline-width: January;
  }
}

@media January {
  .c0 {
    outline-width: December;
  }
}

@media April {
  .c0 {
    outline-width: April;
  }
}

@media June {
  .c0 {
    outline-width: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-width: November;
  }
}

@media April {
  .c0 {
    outline-width: January;
  }
}

@media January {
  .c0 {
    outline-width: December;
  }
}

@media April {
  .c0 {
    outline-width: April;
  }
}

@media June {
  .c0 {
    outline-width: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    outline-width: July;
  }
}

@media April {
  .c0 {
    outline-width: August;
  }
}

@media January {
  .c0 {
    outline-width: September;
  }
}

@media April {
  .c0 {
    outline-width: November;
  }
}

@media June {
  .c0 {
    outline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    outline-width: July;
  }
}

@media April {
  .c0 {
    outline-width: August;
  }
}

@media January {
  .c0 {
    outline-width: September;
  }
}

@media April {
  .c0 {
    outline-width: November;
  }
}

@media June {
  .c0 {
    outline-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-width: January;
  }
}

@media April {
  .c0 {
    outline-width: December;
  }
}

@media January {
  .c0 {
    outline-width: April;
  }
}

@media April {
  .c0 {
    outline-width: May;
  }
}

@media June {
  .c0 {
    outline-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-width: January;
  }
}

@media April {
  .c0 {
    outline-width: December;
  }
}

@media January {
  .c0 {
    outline-width: April;
  }
}

@media April {
  .c0 {
    outline-width: May;
  }
}

@media June {
  .c0 {
    outline-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders postitive number 1`] = `
Array [
  .c0 {
  outline-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders string 1`] = `
Array [
  .c0 {
  outline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineWidth renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`outlineWidth renders valid theme path 1`] = `
Array [
  .c0 {
  outline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
